make docker mount code as a volume

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,4 @@ services:
     ports:
       - "4200:4200"
     volumes:
-      - ./angular:/project
-      - /project/node_modules
-    environment:
-      - STYLE=css
+      - ./:/usr/src/app
