--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flatpickr": "^4.6.13",
     "new": "^0.1.1",
     "ngx-bootstrap": "^18.0.2",
+    "ngx-pipes": "^3.2.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.3",
     "zone.js": "~0.14.8"
