--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "publish": "ng build --base-href https://wajdimuh.github.io/ToDoListFrontEnd/ --configuration=production && npx ngh --dir=dist/to-do-list-front-end/browser --repo=https://github.com/WajdiMuh/ToDoListFrontEnd.git",
     "test": "ng test"
   },
   "private": true,
@@ -24,6 +25,7 @@
     "@popperjs/core": "^2.11.8",
     "@schematics/angular": "^18.1.2",
     "angular-calendar": "^0.31.1",
+    "angular-cli-ghpages": "^2.0.3",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "demo-utils": "^0.5.3",
