--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "demo-utils": "^0.5.3",
     "flatpickr": "^4.6.13",
+    "hammerjs": "^2.0.8",
     "new": "^0.1.1",
     "ngx-bootstrap": "^18.0.2",
     "ngx-pipes": "^3.2.2",
@@ -42,6 +43,7 @@
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.2",
     "@angular/localize": "^18.1.2",
+    "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "~5.1.4",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.3",
