--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,6 @@ services:
     container_name: frontend_container
     ports:
       - "4200:4200"
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
