--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-bootstrap": "^18.0.2",
     "ngx-pipes": "^3.2.2",
     "rxjs": "~7.8.1",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.6.3",
     "zone.js": "~0.14.8"
   },
